# zephyr_demo_mspm0g3507

./: CMakeLists.txt  README.md  prj.conf
Docs/: 开发环境.md  项目结构.md
boards/: lp_mspm0g3507.overlay
src/: main.c
